--- a/style.css
+++ b/style.css
@@ -260,6 +260,9 @@ button:hover {
         height: auto;
         padding: 20px;
     }
+    .scroll{
+        display: grid;
+    }
 
     .temp {
         font-size: 35px;
